# nsl

./: CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.dox  Doxyfile.in  LICENCE  Makefile  Makefile.am  Neutron EDM Experiment.sln  Neutron EDM Experiment.vcproj  README  README.md  autogen.sh  configure.ac  nsl Neutron Test program.vcproj  nslprops.txt
doc/: nslprops.txt
matlab/: readbounce.m
matlab/gui/: Basic Velocity Plot.nds  Bottle radius long range at 0.5m zdip  False hgnedm.nds  False mercury dipole over volume average at several radii.nds  addpredicted.m  analyse_falsedata.m  commonheaders.m  dipole effects on mercury.nds  dipole_overz.nds  editdata.fig  editdata.m  errorbarlog.m  exportfig.m  file_dataset.m  fileversion.m  fitpoly.m  getdata.m  getdatapoint.m  getheader.m  getproperty.m  getxydata.m  importresults.m  neutron.fig  neutron.m  oldneutron_getheader.m  predicted_dipole.m  rotatecolor.m  setgolden.m  testdata.txt
nslneutron.xcodeproj/: project.pbxproj  xgkkp.mode1  xgkkp.pbxuser
scripts/: edmexperiment.nsl  newname.nsl  parsenum.txt  testexperiment.nsl  testparse.nsl  veltest.nsl
src/: CMakeLists.txt  Makefile.am  container.cpp  container.h  cparser.cpp  cparser.h  datasets.h  edmexperiment.cpp  edmexperiment.h  electromagnetics.cpp  electromagnetics.h  errors.cpp  errors.h  main.cpp  neutronphysics.cpp  neutronphysics.h  nslobject.cpp  nslobject.h  nslobjectfactory.cpp  nslobjectfactory.h  nsltest.cpp  particle.cpp  particle.h  physics.cpp  physics.h  random.cpp  random.h  reporters.cpp  reporters.h  solver.cpp  solver.h  tools.cpp  tools.h  variable.cpp  variable.h  vector3.h  volume_cylinder.cpp
