bin_PROGRAMS = nslneutron
LDFLAGS=-lm

nslneutron_SOURCES = container.cpp container.h cparser.cpp cparser.h electromagnetics.cpp electromagnetics.h errors.cpp errors.h main.cpp nslobject.cpp nslobject.h nslobjectfactory.cpp nslobjectfactory.h particle.cpp particle.h physics.cpp physics.h volume_cylinder.cpp

nslneutron_LDADD = -lm