bin_PROGRAMS = nslneutron
LDFLAGS=-lm

nslneutron_SOURCES = electromagnetics.cpp electromagnetics.h particle.cpp errors.cpp particle.h container.cpp           errors.h               physics.cpp container.h             main.cpp                physics.h cparser.cpp              reporters.cpp cparser.h               nslobject.cpp           reporters.h datasets.h              nslobject.h             vector3.h edmexperiment.cpp       nslobjectfactory.cpp    volume_cylinder.cpp edmexperiment.h         nslobjectfactory.h tools.h tools.cpp


nslneutron_LDADD = -lm

